# model-tracker-server

./: .gitignore  API_REFERENCE.md  Dockerfile  QUICK_START.md  README.md  SCRAPER_GUIDE.md  agents.md  pyproject.toml  test-bundle-sample.json
_comms/: model-catalog-integration-notes.md  model-catalog-requests.md  script2screen-integration-response.md
data/: model_pricing.json
src/pricing_service/: scraper.py  server.py
src/pricing_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pricing_service/scrapers/: __init__.py  elevenlabs.py  fal.py  gemini.py  hedra.py  openai.py  runway.py
ui/: index.html
